# django-jazzmin

./: .gitignore  .python-version  .travis.yml  AGENTS.md  Contributor.md  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.rst  cli.py  dev-requirements.txt  hatch_build.py  mkdocs.yml  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  deploy.yml  heroku.yml  main.yml  pre-release.yml  pythonpackage.yml  release.yml
adminlteui/: __init__.py  admin.py  apps.py  compat.py  context_processors.py  models.py  widgets.py
adminlteui/locale/zh-Hans/LC_MESSAGES/: django.mo  django.po
adminlteui/locale/zh/LC_MESSAGES/: django.mo  django.po
adminlteui/migrations/: 0001_initial.py  0002_options_valid.py  0003_menu.py  0004_auto_20190708_1832.py  0005_menu_priority_level.py  0006_auto_20200504_0801.py
adminlteui/templates/admin/: 500.html  base.html  base_site.html  change_form.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  delete_selected_confirmation.html  filter.html  index.html  invalid_setup.html  login.html  object_history.html  pagination.html  search_form.html  submit_line.html  tree_change_list_results.html
adminlteui/templates/admin/includes/: fieldset.html  object_delete_summary.html
adminlteui/templates/adminlte/: form.html  general_option.html  menu_change_form.html  menu_change_list.html
adminlteui/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html
adminlteui/templatetags/: adminlte_list.py  adminlte_menu.py  adminlte_options.py
docs/: about.md  bugs_and_features.md  configuration.md  development.md  guide.md  index.md  installation.md  ui_customisation.md
jazzmin/: __init__.py  apps.py  compat.py  metrics.py  settings.py  types.py  utils.py  validators.py  widgets.py
jazzmin/locale/bg/LC_MESSAGES/: django.mo  django.po
jazzmin/locale/de/LC_MESSAGES/: django.mo  django.po
jazzmin/locale/es/LC_MESSAGES/: django.mo  django.po
jazzmin/locale/fr/LC_MESSAGES/: django.mo  django.po
jazzmin/locale/hu/LC_MESSAGES/: django.mo  django.po
jazzmin/locale/pt_BR/LC_MESSAGES/: django.po
jazzmin/locale/ru/LC_MESSAGES/: django.mo  django.po
jazzmin/locale/zh-Hans/LC_MESSAGES/: django.mo
jazzmin/locale/zh/LC_MESSAGES/: django.po
jazzmin/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
jazzmin/locale/zh_Hant/LC_MESSAGES/: django.mo  django.po
jazzmin/static/admin/js/: cancel.js  popup_response.js
jazzmin/static/import_export/css/: import.css
jazzmin/static/jazzmin/css/: checkbox.css  django.css  loader.css  main-rtl.css  main.css  main.css.backup  scrollbar.css
jazzmin/static/jazzmin/js/: change_form.js  change_list.js  change_select2.js  dashboard_filter.js  loader.js  main.js  related-modal.js  ui-builder.js
jazzmin/static/nested_admin/: jazzmin.css
jazzmin/templates/admin/: 404.html  500.html  actions.html  app_index.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  mptt_filter.html  object_history.html  pagination.html  popup_response.html  search_form.html  submit_line.html  tabular_paginator.html
jazzmin/templates/admin/edit_inline/: stacked.html  tabular.html
jazzmin/templates/admin/filer/: breadcrumbs.html  change_form.html  delete_selected_files_confirmation.html
jazzmin/templates/admin/import_export/: base.html  change_list_export_item.html  change_list_import_export.html  change_list_import_item.html  export.html  import.html
jazzmin/templates/admin/includes/: fieldset.html  object_delete_summary.html
jazzmin/templates/admin/solo/: change_form.html  object_history.html
jazzmin/templates/admin_doc/: base_docs.html  bookmarklets.html  index.html  missing_docutils.html  model_detail.html  model_index.html  template_detail.html  template_filter_index.html  template_tag_index.html  view_detail.html  view_index.html
jazzmin/templates/jazzmin/includes/: accordion.html  carousel.html  collapsible.html  horizontal_tabs.html  related_modal.html  single.html  ui_builder_panel.html  veritcal_tabs.html  vertical_tabs.html
jazzmin/templates/jazzmin/widgets/: checkbox.html  select.html
jazzmin/templates/registration/: base.html  logged_out.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
jazzmin/templatetags/: jazzmin.py
tests/: conftest.py  factories.py  test_admin.py  test_admin_customised.py  test_admin_main.py  test_admin_permissions.py  test_admin_views.py  test_adminlte.py  test_bootstrap5_migration.py  test_collectstatic.py  test_customisation.py  test_init.py  test_jazzmin.py  test_jazzmin_menus.py  test_permissions.py  test_settings.py  test_smoke.py  test_templatetags.py  test_utils.py  utils.py
tests/test_app/: Procfile  dev-requirements.txt  factories.py  manage.py  requirements.txt  settings.py  urls.py  views.py  wsgi.py
tests/test_app/.reports/: coverage.xml
tests/test_app/.reports/htmlcov/: _Users_tyson_workspace_django-jazzmin_jazzmin___init___py.html  _Users_tyson_workspace_django-jazzmin_jazzmin_apps_py.html  _Users_tyson_workspace_django-jazzmin_jazzmin_compat_py.html  _Users_tyson_workspace_django-jazzmin_jazzmin_settings_py.html  _Users_tyson_workspace_django-jazzmin_jazzmin_templatetags___init___py.html  _Users_tyson_workspace_django-jazzmin_jazzmin_templatetags_jazzmin_py.html  _Users_tyson_workspace_django-jazzmin_jazzmin_utils_py.html  _Users_tyson_workspace_django-jazzmin_jazzmin_widgets_py.html  index.html  status.json
tests/test_app/apps/books/: admin.py  apps.py  models.py
tests/test_app/books/: admin.py  models.py  resources.py
tests/test_app/loans/: admin.py  models.py
tests/test_app/polls/: admin.py  apps.py  models.py
tests/test_app/utils/: admin.py  apps.py  models.py
(+44 files in other folders)
