[project]
name = "django-jazzmin"
version = "3.0.2"
description = "Drop-in theme for django admin, that utilises AdminLTE 3 & Bootstrap 5 to make yo' admin look jazzy"
readme = "README.md"
license = "MIT"
authors = [{ name = "Shipit", email = "packages@shipit.ltd" }]
maintainers = [{ name = "Shipit", email = "packages@shipit.ltd" }]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]
keywords = ["django", "dashboard", "theme", "admin", "jazzmin"]
classifiers = [
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage = "https://github.com/farridav/django-jazzmin"
Repository = "https://github.com/farridav/django-jazzmin"
Documentation = "https://django-jazzmin.readthedocs.io"
"Bug Tracker" = "https://github.com/farridav/django-jazzmin/issues"
"All Releases" = "https://github.com/farridav/django-jazzmin/releases"
"Latest Release" = "https://github.com/farridav/django-jazzmin/releases/latest"
Source = "https://github.com/farridav/django-jazzmin"

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "Werkzeug>=3.1.3",
    "django-extensions>=3.2.3",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-cov>=4.1.0",
    "Faker>=33.1.0",
    "coveralls>=3.3.1",
    "beautifulsoup4>=4.12.3",
    "mkdocs>=1.6.1",
    "polib>=1.2.0",
    "factory-boy>=3.3.1",
    "mypy>=1.13.0",
    "click>=8.1.7",
    "ipdb>=0.13.13",
    "ruff>=0.8.1",
    "whitenoise>=6.0",
]

[tool.uv]
# Test PyPI index for pre-release publishing
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["jazzmin"]
exclude = ["tests", "docs"]

[tool.hatch.build.targets.wheel]
packages = ["jazzmin"]

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb -p no:warnings --cov=jazzmin"
junit_family = "xunit2"
norecursedirs = ".git .tox _resource .mypy_cache build dist docs"
DJANGO_SETTINGS_MODULE = "tests.test_app.library.settings"
FAIL_INVALID_TEMPLATE_VARS = 1

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",    # PEP8 errors
    "W",    # PEP8 warnings
    "F",    # PyFlakes
    "I",    # isort
    "C",    # mccabe
    "T201", # flake8-print
]

[tool.ruff.lint.isort]
known-first-party = ["jazzmin"]
known-local-folder = ["tests"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
omit = ["*/__init__.py", ".tox", ".mypy_cache", ".reports", ".git"]

[tool.coverage.report]
omit = ["*/__init__.py", ".tox", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.mypy]
python_version = "3.10"
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pkg_resources.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["django.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["factory", "factory.*"]
follow_imports = "skip"

# Tests and test app: relax strictness so we can fix gradually
[[tool.mypy.overrides]]
module = ["tests.*", "tests.test_app.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false

# Django template tags use untyped decorators (register.simple_tag etc.)
[[tool.mypy.overrides]]
module = ["jazzmin.templatetags.*"]
disallow_untyped_decorators = false
