[metadata]
description-file = README.md

[flake8]
ignore = C901,W504,W503
max-complexity = 10
max-line-length = 120
exclude =
    .git,
    .venv,
    _resource,
    migrations,
statistics = 1

[coverage:run]
omit =
    */migrations/*.py
    */__init__.py

[coverage:report]
omit =
    */migrations/*.py
    */__init__.py

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.test_app.settings
addopts = -s --pdbcls=IPython.terminal.debugger:TerminalPdb -p no:warnings --junitxml=./test-reports/coverage.xml --cov-report=html:htmlcov --cov jazzmin
norecursedirs = .git _resource build dist docs
testpaths = ./tests
