[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[flake8]
ignore = C901,W504,W503
max-complexity = 10
max-line-length = 120
exclude =
    .git,
    .venv,
    .tox,
    _resource,
    migrations,
statistics = 1

[coverage:run]
omit =
    */migrations/*.py
    */__init__.py

[coverage:report]
omit =
    */migrations/*.py
    */__init__.py

[tool:pytest]
addopts = -s --pdbcls=IPython.terminal.debugger:TerminalPdb
DJANGO_SETTINGS_MODULE = tests.test_app.settings
FAIL_INVALID_TEMPLATE_VARS = 1
norecursedirs = .git _resource build dist docs
testpaths = ./tests
