[metadata]
name = Django Jazzmin
description-file = README.md
version = attr: jazzmin.version
url = https://github.com/farridav/django-jazzmin
author = farridav
description = Drop-in theme for django admin, that utilises AdminLTE 3 & Bootstrap 4 to make yo' admin look jazzy
long_description = file: README.rst
license = MIT
classifiers =
    Environment :: Web Environment
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://django-jazzmin.readthedocs.io/
    Release notes = https://github.com/farridav/django-jazzmin/releases
    Source = https://github.com/farridav/django-jazzmin/

[bdist_wheel]
universal = 1

[flake8]
ignore = C901,W504,W503
max-complexity = 10
max-line-length = 120
exclude =
    .git,
    .venv,
    .tox,
    _resource,
    migrations,
statistics = 1

[coverage:run]
omit =
    .tox/*
    */migrations/*.py
    */__init__.py

[coverage:report]
omit =
    .tox/*
    */migrations/*.py
    */__init__.py

[tool:pytest]
addopts = -s --pdbcls=IPython.terminal.debugger:TerminalPdb
DJANGO_SETTINGS_MODULE = tests.test_app.settings
FAIL_INVALID_TEMPLATE_VARS = 1
norecursedirs = .git _resource build dist docs .tox
testpaths = ./tests
